Calendar switches based on AJAX. Converted to using input buttons so it will work without js, but it's not finished yet. Also fixed an inlineedit bug where the border was causing the text area to jump.

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -706,3 +706,18 @@ p {
 #reading_list {
 	position: relative;
 }
+
+.reading_description {
+	border: 1px solid;
+	border-color: transparent;
+}
+
+.inlineEdit-placeholder {
+	border: 1px solid;
+	border-color: transparent;
+	
+}
+
+#choose_date form {
+	display: inline;
+}
